# Forage-App

./: PRD.md  README.md
.github/workflows/: deploy.yml  desktop.yml
app/: DESKTOP.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/public/: manifest.webmanifest  sw.js
app/src/: App.tsx  index.css  main.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: AddToCollectionDialog.tsx  BookmarksList.tsx  BulkBar.tsx  CaptureDialog.tsx  CollectionCover.tsx  CollectionDialog.tsx  CollectionView.tsx  CollectionsView.tsx  CommandPalette.tsx  ContextHeader.tsx  DitherGlow.tsx  Fab.tsx  FilterMenu.tsx  FontDialog.tsx  ForageMark.tsx  GradientCover.tsx  HomeView.tsx  ItemDetail.tsx  ItemTile.tsx  KitView.tsx  KitsView.tsx  LibraryView.tsx  MasonryGrid.tsx  Onboarding.tsx  PaletteDialog.tsx  Pixels.tsx  ResurfacePanel.tsx  SearchOverlay.tsx  SettingsModal.tsx  ShareDialog.tsx  ShareViewer.tsx  ShortcutsModal.tsx  Sidebar.tsx  SmartCollectionView.tsx  SoftWash.tsx  SpaceCanvas.tsx  SpacesView.tsx  StoryboardView.tsx  StoryboardsView.tsx  Toaster.tsx  (+3 more)
app/src/data/: sample.ts
docs/: SCREENS.md  STRATEGY.md
docs/case-study/: .gitignore  forage-case-study.md  forage-shot-list.md
extension/: README.md  background.js  manifest.firefox.json  manifest.json  popup.html  popup.js
server/: README.md  share-worker.js  sync-worker.js  unfurl-worker.js  worker.js  wrangler.share.toml  wrangler.sync.toml  wrangler.toml  wrangler.unfurl.toml
(+28 files in other folders)
