[package]
name = "forage"
version = "1.0.0"
description = "A calm, beautiful home for everything you forage and create."
authors = ["Nikolai Paquin"]
edition = "2021"

[lib]
name = "forage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
